<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.matcher.matcher.activities.ChatActivity">
    <item
        android:id="@+id/item_chat_delete_group"
        android:orderInCategory="100"
        android:title="@string/item_chat_delete_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_chat_leave_group"
        android:orderInCategory="100"
        android:title="@string/item_chat_leave_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_chat_add_member"
        android:orderInCategory="100"
        android:title="@string/item_chat_add_member"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_chat_remove_member"
        android:orderInCategory="100"
        android:title="@string/item_chat_remove_member"
        app:showAsAction="never" />
</menu>
