<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/create_event_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_create_event_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_create_event_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_create_event_name_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/create_event_name_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/create_event_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_create_event_name_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_create_event_description_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_event_description_textview"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/create_event_description_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_create_event_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_create_event_description_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/event_schedule"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/create_event_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_create_event_date_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_create_event_date_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/event_date"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_today" />

            <TextView
                android:id="@+id/tv_create_event_time_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/event_time"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_popup_reminder" />

        </LinearLayout>

        <TextView
            android:id="@+id/create_event_location_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_event_date_container"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/event_place"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/event_location_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_event_location_header"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/location_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_event_place" />

            <EditText
                android:id="@+id/location_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/location_button"
                android:inputType="none"
                android:ellipsize="end"
                android:hint="@string/location_field_hint"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/create_event_invite_friends_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_location_container"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/invite_friends"
            android:textColor="@color/colorIndivateTab" />

        <Button
            android:id="@+id/create_event_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_event_invite_friends_button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_event_ok_text"
            android:textColor="@color/colorIndivateTab" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_event_ok_button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_event_delete_event_text"
            android:textColor="@color/colorIndivateTab"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>